<resources>
    <string name="app_name">Primera Aplicacion</string>

    <string name="textview_title_text">Ciclo de Vida de una Actividad</string>

    <string name="edittext_numberone_text">Ingrese un numero</string>
    <string name="edittext_numbertwo_text">Ingrese otro numero</string>
    <string name="textview_result_text">0</string>

    <string name="button_add_text">Sumar</string>
    <string name="button_subtract_text">Restar</string>
    <string name="button_multiply_text">Multiplicar</string>
    <string name="button_divide_text">Dividir</string>

    <string name="button_pow_text">Potencia</string>
    <string name="button_factorial_text">Factorial</string>

    <string name="button_show_second_activity_text">Mostrar Segunda Actividad</string>
    <string name="button_show_third_activity">Mostrar tercer activity</string>

    <string name="textview_list_text">Lista de valores</string>
    <string name="button_browser_text">Mostrar navegador</string>
    <string name="button_call_phone_text">Realizar llamada</string>
    <string name="button_show_main__activity_text">Mostrar Activity</string>
    <string name="button_ubicacion_activity_text">Mostrar Ubicacion</string>

    <string name="menu_file">Archivo</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_finish">Cerrar</string>
    <string name="menu_file_show_browser">Mostrar Navegador</string>
    <string name="menu_file_call_phone">Realizar Llamada</string>

    <string name="menu_edit">Editar</string>
    <string name="menu_edit_copy">Copiar</string>
    <string name="menu_edit_cut">Cortar</string>
    <string name="menu_edit_paste">Pegar</string>


</resources>